# cpp-examples

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  cpp-examples.code-workspace  cspell.json
crtp/: CMakeLists.txt
meta/: crtp-for-chaining.cpp
rules-of-3-5-0/: CMakeLists.txt  rule-of-0.cpp  rule-of-3.cpp  rule-of-5.cpp
scripts/: clang-format-all.sh
spsc/: CMakeLists.txt  spsc-tripple-buffer.cpp
src/algo/: binary_search.cpp
src/compile-time/: CMakeLists.txt  compile-time-constexpr.cpp  compile-time-merge-intervals.cpp  compile-time-parse-int.cpp  compile-time-prime-sieve.cpp
src/concurrent/: CMakeLists.txt  barrier.cpp  binary-sema.cpp  cond-var.cpp  counting-sema.cpp  latch.cpp  naive-sema.cpp  publish-shared-ptr.cpp  signal-handler.cpp  spsc-triple-buffer.cpp  thread-pool.cpp
src/concurrent/algo/: CMakeLists.txt  concurrent-qsort.cpp
src/concurrent/data-structures/: CMakeLists.txt
src/concurrent/data-structures/lock-based/: CMakeLists.txt  lock-based-bounded-queue.cpp  lock-based-queue.cpp
src/crtp/: crtp-for-chaining.cpp
src/data-structures/: CMakeLists.txt  array-based-queue.cpp  array-based-stack.cpp  binary-search-tree.cpp  doubly-linked-list.cpp  lru-cache.cpp  max-heap.cpp
src/functional/: CMakeLists.txt  unix-like-pipe-operator.cpp  unix-like-pipe-operator.h
src/idioms/: CMakeLists.txt  rule-of-0.cpp  rule-of-3.cpp  rule-of-5-swap.cpp  rule-of-5.cpp
src/memory/: CMakeLists.txt  shared-ptr.cpp
src/rules-of-3-5-0/: rule-of-0.cpp  rule-of-3.cpp  rule-of-5.cpp
src/spsc/: CMakeLists.txt  spsc-triple-buffer.cpp
src/stl/: CMakeLists.txt  filesystem.cpp  generator.cpp  mdspan-adj-matrix.cpp  mdspan.cpp  optional-monadic.cpp  print.cpp  ranges-libc++.cpp  ranges-libstdc++.cpp
src/system/: CMakeLists.txt
src/system/net/: CMakeLists.txt  ip_packet_parser.cpp
src/system/posix/: CMakeLists.txt  posix-bounded-queue.c  pthread-cvar.c  pthread-mutex.c  pthread-simple.c
src/system/regex/: regex.cpp
