cmake_minimum_required(VERSION 3.20)

project(cpp-examples)

add_subdirectory(src/crtp)
add_subdirectory(src/idioms)
add_subdirectory(src/concurrent)
add_subdirectory(src/functional)
add_subdirectory(src/compile-time)
add_subdirectory(src/stl)
add_subdirectory(src/data-structures)
add_subdirectory(src/memory)